src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>BDR_Signal__c</fullName>
        <formula>IF(ISBLANK(Best_Matched_Account__c),null,Best_Matched_Account__r.BDR_Signal__c)</formula>
        <label>BDR Signal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Domain__c</fullName>
        <description>The domain of the account.</description>
        <formula>IF ( 
    Contains(Website,&quot;www.&quot;), 
    MID(Website,FIND(&quot;www.&quot;,Website,1)+4, (LEN(Website) - 
    FIND(&quot;www.&quot;,Website,1)+4)), 
    Substitute( 
    Website,LEFT(Website,FIND(&quot;http://&quot;,Website)+6), 
    NULL) 
    )</formula>
        <inlineHelpText>The domain of the account.</inlineHelpText>
        <label>Company Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Target: an account with no attempted outreach 
    Cold: an account that hasn&#39;t responded to outreach 
    Working: an account where 1+ people are being prospected 
    Selling: an account with an open opportunity 
    Win-Back: a sales loss 
    Customer: a sales win</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Target</fullName>
                    <default>true</default>
                    <label>Target</label>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Selling</fullName>
                </value>
                <value>
                    <fullName>Win-back</fullName>
                </value>
                <value>
                    <fullName>Customer - Active</fullName>
                </value>
                <value>
                    <fullName>Customer - Churned</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                    <isActive>false</isActive>
                    <label>Evaluation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Accounts_14_days__c</fullName>
        <formula>IF( TODAY() - LastActivityDate &lt;= 14,1,0)</formula>
        <label>Active Accounts (14 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
</CustomObject>